--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Your City, Country</span>
+                        <span>FH5V+H4G, Khwar, Kulyari Kalay</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-github"></i></a>
