--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="section-title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="about me.jpeg" alt="About Asmat">
+                    <img src="https://via.placeholder.com/350x350?text=Asmat+Akhtar" alt="About Asmat">
                 </div>
                 <div class="about-text">
                     <h3>Python Developer with 2 Years of Experience</h3>
@@ -266,7 +266,7 @@
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>FH5V+H4G, Khwar, Kulyari Kalay</span>
+                        <span>Your City, Country</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-github"></i></a>
