--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="section-title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/350x350?text=Asmat+Akhtar" alt="About Asmat">
+                    <img src="about me.jpeg="About Asmat">
                 </div>
                 <div class="about-text">
                     <h3>Python Developer with 2 Years of Experience</h3>
