--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                 <div class="project-card" data-category="web">
                     <img src="https://via.placeholder.com/400x250?text=E-commerce+Backend" alt="Project 1">
                     <div class="project-info">
-                        <h3>E-commerce Backend</h3>
-                        <p>Built with Django, featuring product management, user authentication, and payment integration.</p>
+                        <h3>Professional Banking System</h3>
+                        <p>Built with tkinter it is a powerful bank and very expensive it store data in hash form.</p>
                         <div class="project-tech">
                             <span>Python</span>
                             <span>Django</span>
