--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+b<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                             <p>Your Location</p>
                         </div>
                     </div>
-                    <a href="#" class="btn" id="download-cv">Download CV</a>
+                    <a href="#" class="btn" id="image.png">Download CV</a>
                 </div>
             </div>
         </div>
