--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ b<!DOCTYPE html>
             </div>
             <div class="projects-grid">
                 <div class="project-card" data-category="web">
-                    <img src="https://via.placeholder.com/400x250?text=E-commerce+Backend" alt="Project 1">
+                    <img src="IMG_20250611_212700_150.jpg" alt="Project 1">
                     <div class="project-info">
                         <h3>Professional Banking System</h3>
                         <p>Built with tkinter it is a powerful bank and very expensive it store data in hash form.</p>
