--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ b<!DOCTYPE html>
                         <p>Built with tkinter it is a powerful bank and very expensive it store data in hash form.</p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Django</span>
-                            <span>PostgreSQL</span>
+                            <span>tkinter</span>
+                            <span>json</span>
                         </div>
                         <a href="#" class="btn small">View Details</a>
                     </div>
@@ -207,12 +207,12 @@ b<!DOCTYPE html>
                 <div class="project-card" data-category="automation">
                     <img src="https://via.placeholder.com/400x250?text=Data+Processing+Automation" alt="Project 2">
                     <div class="project-info">
-                        <h3>Data Processing Automation</h3>
-                        <p>Automated data collection, processing, and report generation for a financial company.</p>
+                        <h3>Pro videos and playlist downloader</h3>
+                        <p>it is a pro video downloader which is make from html for frontend and python flask for backend it download videos from every site</p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Pandas</span>
-                            <span>OpenPyXL</span>
+                            <span>flask</span>
+                            <span>HTML</span>
                         </div>
                         <a href="#" class="btn small">View Details</a>
                     </div>
