--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@ b<!DOCTYPE html>
                 <div class="project-card" data-category="data">
                     <img src="https://via.placeholder.com/400x250?text=Sales+Analytics+Dashboard" alt="Project 3">
                     <div class="project-info">
-                        <h3>Sales Analytics Dashboard</h3>
-                        <p>Interactive dashboard for visualizing sales data and generating insights.</p>
+                        <h3>verb 2nd and 3rd form finder</h3>
+                        <p>it is a project which is use for find the verb2nd and 3rd form of verb</p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Plotly</span>
-                            <span>Flask</span>
+                            <span>kivy framework</span>
+                            <span>English</span>
                         </div>
                         <a href="#" class="btn small">View Details</a>
                     </div>
