--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ b<!DOCTYPE html>
                         </div>
                         <div class="detail-item">
                             <span>From:</span>
-                            <p>Your Location</p>
+                            <p>FH5V+H4G, Khwar, Kulyari Kalay, Pakistan</p>
                         </div>
                     </div>
                     <a href="#" class="btn" id="image.png">Download CV</a>
@@ -266,7 +266,7 @@ b<!DOCTYPE html>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Your City, Country</span>
+                        <span>FH5V+H4G, Khwar, Kulyari Kalay, Pakistan</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-github"></i></a>
