--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ b<!DOCTYPE html>
                             <p>FH5V+H4G, Khwar, Kulyari Kalay, Pakistan</p>
                         </div>
                     </div>
-                    <a href="#" class="btn" id="image.png">Download CV</a>
+                    <a href="image.png" class="btn" id="download-cv">Download CV</a>
                 </div>
             </div>
         </div>
