--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ b<!DOCTYPE html>
                 </div>
 
                 <div class="project-card" data-category="automation">
-                    <img src="https://via.placeholder.com/400x250?text=Data+Processing+Automation" alt="Project 2">
+                    <img src="vedio downloadoder.JPG" alt="Project 2">
                     <div class="project-info">
                         <h3>Pro videos and playlist downloader</h3>
                         <p>it is a pro video downloader which is make from html for frontend and python flask for backend it download videos from every site</p>
