--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ b<!DOCTYPE html>
             </div>
             <div class="projects-grid">
                 <div class="project-card" data-category="web">
-                    <img src="IMG_20250611_212700_150.jpg" alt="Project 1">
+                    <img src="assets/atb.jpg" alt="Project 1">
                     <div class="project-info">
                         <h3>Professional Banking System</h3>
                         <p>Built with tkinter it is a powerful bank and very expensive it store data in hash form.</p>
@@ -205,7 +205,7 @@ b<!DOCTYPE html>
                 </div>
 
                 <div class="project-card" data-category="automation">
-                    <img src="vedio downloadoder.JPG" alt="Project 2">
+                    <img src="assets/vedio downloadoder.JPG" alt="Project 2">
                     <div class="project-info">
                         <h3>Pro videos and playlist downloader</h3>
                         <p>it is a pro video downloader which is make from html for frontend and python flask for backend it download videos from every site</p>
@@ -219,7 +219,7 @@ b<!DOCTYPE html>
                 </div>
 
                 <div class="project-card" data-category="data">
-                    <img src="https://via.placeholder.com/400x250?text=Sales+Analytics+Dashboard" alt="Project 3">
+                    <img src="assets/verb 2nd and 3rd form finder.JPG" alt="Project 3">
                     <div class="project-info">
                         <h3>verb 2nd and 3rd form finder</h3>
                         <p>it is a project which is use for find the verb2nd and 3rd form of verb</p>
@@ -231,18 +231,6 @@ b<!DOCTYPE html>
                         <a href="#" class="btn small">View Details</a>
                     </div>
                 </div>
-
-                <div class="project-card" data-category="web">
-                    <img src="https://via.placeholder.com/400x250?text=Task+Management+App" alt="Project 4">
-                    <div class="project-info">
-                        <h3>Task Management App</h3>
-                        <p>A collaborative task management application with real-time updates.</p>
-                        <div class="project-tech">
-                            <span>Python</span>
-                            <span>Django</span>
-                            <span>JavaScript</span>
-                        </div>
-                        <a href="#" class="btn small">View Details</a>
                     </div>
                 </div>
             </div>
