--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ b<!DOCTYPE html>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="profile.jpg" alt="Asmat Akhtar">
+                <img src="assets/profile.jpg" alt="Asmat Akhtar">
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@ b<!DOCTYPE html>
             <h2 class="section-title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="about me.jpeg"="About Asmat">
+                    <img src="assets/about me.jpeg"="About Asmat">
                 </div>
                 <div class="about-text">
                     <h3>Python Developer with 2 Years of Experience</h3>
@@ -74,7 +74,7 @@ b<!DOCTYPE html>
                             <p>FH5V+H4G, Khwar, Kulyari Kalay, Pakistan</p>
                         </div>
                     </div>
-                    <a href="Asmat cv.pdf" class="btn" id="download-cv">Download CV</a>
+                    <a href="assets/Asmatcv.pdf" class="pdf" id="download-cv">Download CV</a>
                 </div>
             </div>
         </div>
@@ -205,7 +205,7 @@ b<!DOCTYPE html>
                 </div>
 
                 <div class="project-card" data-category="automation">
-                    <img src="assets/vedio downloadoder.JPG" alt="Project 2">
+                    <img src="assets/video_downloader.JPG" alt="Project 2">
                     <div class="project-info">
                         <h3>Pro videos and playlist downloader</h3>
                         <p>it is a pro video downloader which is make from html for frontend and python flask for backend it download videos from every site</p>
@@ -219,7 +219,7 @@ b<!DOCTYPE html>
                 </div>
 
                 <div class="project-card" data-category="data">
-                    <img src="assets/verb 2nd and 3rd form finder.JPG" alt="Project 3">
+                    <img src="assets/verbfinder.JPG" alt="Project 3">
                     <div class="project-info">
                         <h3>verb 2nd and 3rd form finder</h3>
                         <p>it is a project which is use for find the verb2nd and 3rd form of verb</p>
@@ -231,7 +231,6 @@ b<!DOCTYPE html>
                         <a href="#" class="btn small">View Details</a>
                     </div>
                 </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -249,18 +248,13 @@ b<!DOCTYPE html>
                         <span>mr.asmatbuneri@gmail.com</span>
                     </div>
                     <div class="info-item">
-                        <i class="fas fa-phone"></i>
-                        <span>+123 456 7890</span>
-                    </div>
-                    <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <span>FH5V+H4G, Khwar, Kulyari Kalay, Pakistan</span>
                     </div>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/asmatakhtar"><i class="fab fa-github"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-stack-overflow"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>                       
                     </div>
                 </div>
                 <form class="contact-form" id="contact-form">
