--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@ b<!DOCTYPE html>
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/asmatakhtar"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>                       
+                        <a href="https://www.tiktok.com/@asmat_akhtar"><i class="fab fa-tiktok"></i></a>                       
                     </div>
                 </div>
                 <form class="contact-form" id="contact-form">
